[package]
name = "train-routing"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.0.2"
itertools = "0.12.1"
jemallocator = "0.5.4"
ordered-float = "2.8.0"
rayon = "1.10.0"
toml = "0.8.11"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ndarray]
version = "0.15.6"
features = ["serde-1"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.radix-heap]
version = "0.4.2"
features = ["ordered-float"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
